@@ -1,6 +1,6 @@
 #ifndef _TPM_VERSION_H_
 #define _TPM_VERSION_H_
 #define VERSION_MAJOR 0
-#define VERSION_MINOR 2
-#define VERSION_BUILD 1133649310
+#define VERSION_MINOR 3
+#define VERSION_BUILD 1134478494
 #endif /* _TPM_VERSION_H_ */
